<?xml version="1.0" encoding="utf-8" ?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/general_settings" android:key="general_settings">
		<Preference android:title="@string/game_files" android:key="game_files" />
		<Preference android:title="@string/mods" android:key="pref_mods" />
        <CheckBoxPreference android:title="@string/arena_alt_server" android:key="pref_use_alt_server" android:defaultValue="false" />
        <EditTextPreference android:title="@string/arena_alt_address" android:key="pref_alt_address" android:defaultValue="" android:inputType="textUri" />
        <EditTextPreference android:title="@string/arena_alt_port" android:key="pref_alt_port" android:defaultValue="25565" android:inputType="number" />
        <Preference android:key="pref_remote_server_status" android:title="@string/arena_status_title"
            android:layout="@layout/preference_server_status" android:persistent="false" />
        <EditTextPreference android:title="@string/pref_server_ip" android:key="pref_server_ip" android:defaultValue="@string/pref_server_ip_default" android:dialogTitle="@string/pref_server_ip" android:inputType="textUri" />
        <EditTextPreference android:title="@string/pref_server_port" android:key="pref_server_port" android:defaultValue="@string/pref_server_port_default" android:dialogTitle="@string/pref_server_port" android:inputType="number" />
        <CheckBoxPreference android:title="@string/server_run_toggle" android:key="pref_server_enabled" android:defaultValue="false" android:summary="@string/server_run_toggle_summary" />
        <Preference android:key="pref_server_manage" android:title="@string/server_title" android:summary="@string/server_manage_summary" />
        <Preference
            android:key="pref_graphics_settings"
            android:title="@string/pref_graphics_settings_title" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_ui">
		<ListPreference android:entries="@array/pref_encoding_entries" android:title="@string/pref_encoding" android:key="pref_encoding" android:summary="%s" android:defaultValue="@string/pref_encoding_default" android:dialogTitle="@string/pref_encoding" android:entryValues="@array/pref_encoding_values" />
		<Preference android:title="@string/action_show_screen_controls" android:key="pref_controls" />
		<EditTextPreference android:baselineAligned="false" android:hint="1.0" android:title="@string/pref_gamma" android:key="pref_gamma" android:dialogTitle="@string/pref_gamma" android:inputType="numberDecimal" android:textAllCaps="false" />
		<ListPreference android:entries="@array/pref_mouse_mode_entries" android:title="@string/pref_mouse_mode" android:key="pref_mouse_mode" android:summary="%s" android:defaultValue="@string/pref_mouse_mode_default" android:dialogTitle="@string/pref_mouse_mode" android:entryValues="@array/pref_mouse_mode_values" />
		<EditTextPreference android:hint="640x480" android:title="@string/pref_customResolution" android:key="pref_customResolution" android:dialogTitle="@string/pref_customResolution" />
		<CheckBoxPreference android:title="@string/pref_hide_controls" android:key="pref_hide_controls"  android:defaultValue="false" />
		<CheckBoxPreference android:title="@string/pref_screen_keeper" android:key="pref_screen_keeper" android:defaultValue="true" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/voice_title" android:key="voice_settings">
		<Preference android:key="pref_chat_voice" android:title="@string/chat_voice_title" android:summary="@string/chat_voice_summary" />
		<CheckBoxPreference android:key="pref_voice_enabled" android:title="@string/voice_enable" android:summary="@string/voice_enable_summary" android:defaultValue="true" />
		<EditTextPreference android:key="pref_voice_ptt_key" android:title="@string/voice_ptt_key" android:summary="@string/voice_ptt_summary" android:defaultValue="V" android:inputType="textCapCharacters" />
		<Preference android:key="pref_voice_permissions" android:title="@string/voice_permissions" android:summary="@string/voice_permissions_summary" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_advanced">
		<ListPreference android:entries="@array/pref_debug_level_entries" android:title="@string/pref_debug_level" android:key="pref_debug_level" android:summary="%s" android:defaultValue="@string/pref_debug_level_default" android:dialogTitle="@string/pref_debug_level" android:entryValues="@array/pref_debug_level_values" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/help_title" android:key="help_settings">
		<Preference android:key="pref_help" android:title="@string/help_open_title" android:summary="@string/help_summary" android:icon="@drawable/journal" />
	</PreferenceCategory>
</PreferenceScreen>
